--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
@@ -16,7 +17,10 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
+  "homepage": "https://wendyvo.github.io/employee-directory",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
